// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Shallow Snapshot Tests basic 1`] = `
<ArticleWrapper
  localBackNavi={
    Object {
      "link": "/special-maps/0",
      "text": "全体マップへ戻る",
    }
  }
  showSidebar={true}
>
  <ForwardRef(Box)
    my={1}
  >
    <CenterSpinner />
  </ForwardRef(Box)>
</ArticleWrapper>
`;

exports[`Shallow Snapshot Tests loaded (without thumbnail) 1`] = `
<ArticleWrapper
  localBackNavi={
    Object {
      "link": "/special-maps/0",
      "text": "トイレマップへ戻る",
    }
  }
  showSidebar={true}
>
  <CommonHelmet
    description="定番から穴場まで、ディズニーのトイレマップです。"
    imageUrl="http://localhost/site-image-special-map.png"
    ogType="article"
    title="トイレマップ"
  />
  <ForwardRef(Stack)
    spacing={2}
  >
    <ShareButtons
      description="定番から穴場まで、ディズニーのトイレマップです。"
      title="トイレマップ"
      url="http://localhost/special-maps/1"
    />
    <ForwardRef(Divider) />
    <AuthorLink
      author={
        Object {
          "icon": "https://disneyparkstory.com/wp-content/uploads/2017/09/apple-touch-icon.png",
          "nickname": "Axel",
          "url": "https://disneyparkstory.com",
          "userId": 1,
        }
      }
    />
    <DynamicAlignedText
      component="h2"
      sx={
        Object {
          "wordBreak": "break-all",
        }
      }
      variant="h5"
    >
      トイレマップ
    </DynamicAlignedText>
    <DynamicAlignedText
      fontSize={18}
      whiteSpace="pre-wrap"
    >
      定番から穴場まで、ディズニーのトイレマップです。
    </DynamicAlignedText>
    <ForwardRef(Divider) />
    <IconAndText
      align="center"
      component="h3"
      iconComponent={
        <MyIcon
          variant="map-marker"
        />
      }
      iconPosition="left"
      text="ピン一覧"
      variant="h6"
    />
    <ForwardRef(Stack)
      spacing={5}
    >
      <ForwardRef(Box)
        bgcolor="#f5f8fa"
        border="3px solid #424242"
        key="special-map-marker--67.6875-140.75"
      >
        <NonStyleLink
          to="/special-maps/0?marker=1&park=L"
        >
          <ForwardRef(Box)
            height={200}
            mx="auto"
          >
            <ParkMap
              disabled={true}
              initCenter={
                Object {
                  "lat": -67.6875,
                  "lng": 140.75,
                }
              }
              initZoom={2}
              park="L"
            >
              <MapMarker
                autoOpen={false}
                draggable={false}
                position={
                  Object {
                    "lat": -67.6875,
                    "lng": 140.75,
                  }
                }
                variant="restroom"
                zIndexOffset={0}
              />
            </ParkMap>
          </ForwardRef(Box)>
        </NonStyleLink>
        <ForwardRef(Box)
          p={1}
        >
          <DynamicAlignedText
            component="div"
            mb={1}
            whiteSpace="pre-wrap"
          >
            アリスモチーフのトイレです。トランプ模様の扉がかわいい。
          </DynamicAlignedText>
          <ForwardRef(Typography)
            align="center"
            component="div"
            mb={1}
          >
            <Image
              maxHeight="300px"
              maxWidth="full"
              src="https://cdn-ak.f.st-hatena.com/images/fotolife/n/nats-co/20160323/20160323164220.jpg"
            />
          </ForwardRef(Typography)>
          <NonStyleLink
            to="/special-maps/0?marker=1&park=L"
          >
            <ForwardRef(Typography)
              align="right"
            >
              <ForwardRef(Button)>
                <IconAndText
                  component="span"
                  iconComponent={<Memo />}
                  iconPosition="left"
                  text="地図上で確認する"
                />
              </ForwardRef(Button)>
            </ForwardRef(Typography)>
          </NonStyleLink>
        </ForwardRef(Box)>
      </ForwardRef(Box)>
      <ForwardRef(Box)
        bgcolor="#f5f8fa"
        border="3px solid #424242"
        key="special-map-marker--140.46875-111.0625"
      >
        <NonStyleLink
          to="/special-maps/0?marker=2&park=S"
        >
          <ForwardRef(Box)
            height={200}
            mx="auto"
          >
            <ParkMap
              disabled={true}
              initCenter={
                Object {
                  "lat": -140.46875,
                  "lng": 111.0625,
                }
              }
              initZoom={2}
              park="S"
            >
              <MapMarker
                autoOpen={false}
                draggable={false}
                position={
                  Object {
                    "lat": -140.46875,
                    "lng": 111.0625,
                  }
                }
                variant="restroom"
                zIndexOffset={0}
              />
            </ParkMap>
          </ForwardRef(Box)>
        </NonStyleLink>
        <ForwardRef(Box)
          p={1}
        >
          <DynamicAlignedText
            component="div"
            mb={1}
            whiteSpace="pre-wrap"
          >
            エントランスのトイレならここ。
          </DynamicAlignedText>
          <NonStyleLink
            to="/special-maps/0?marker=2&park=S"
          >
            <ForwardRef(Typography)
              align="right"
            >
              <ForwardRef(Button)>
                <IconAndText
                  component="span"
                  iconComponent={<Memo />}
                  iconPosition="left"
                  text="地図上で確認する"
                />
              </ForwardRef(Button)>
            </ForwardRef(Typography)>
          </NonStyleLink>
        </ForwardRef(Box)>
      </ForwardRef(Box)>
    </ForwardRef(Stack)>
  </ForwardRef(Stack)>
</ArticleWrapper>
`;

exports[`Shallow Snapshot Tests loaded 1`] = `
<ArticleWrapper
  localBackNavi={
    Object {
      "link": "/special-maps/0",
      "text": "トイレマップへ戻る",
    }
  }
  showSidebar={true}
>
  <CommonHelmet
    description="定番から穴場まで、ディズニーのトイレマップです。"
    imageUrl="https://www.yuu-diaryblog.com/wp-content/uploads/2017/06/disney-wc.jpg"
    ogType="article"
    title="トイレマップ"
  />
  <ForwardRef(Stack)
    spacing={2}
  >
    <ShareButtons
      description="定番から穴場まで、ディズニーのトイレマップです。"
      title="トイレマップ"
      url="http://localhost/special-maps/1"
    />
    <ForwardRef(Divider) />
    <AuthorLink
      author={
        Object {
          "icon": "https://disneyparkstory.com/wp-content/uploads/2017/09/apple-touch-icon.png",
          "nickname": "Axel",
          "url": "https://disneyparkstory.com",
          "userId": 1,
        }
      }
    />
    <DynamicAlignedText
      component="h2"
      sx={
        Object {
          "wordBreak": "break-all",
        }
      }
      variant="h5"
    >
      トイレマップ
    </DynamicAlignedText>
    <Image
      src="https://www.yuu-diaryblog.com/wp-content/uploads/2017/06/disney-wc.jpg"
      width="full"
    />
    <DynamicAlignedText
      fontSize={18}
      whiteSpace="pre-wrap"
    >
      定番から穴場まで、ディズニーのトイレマップです。
    </DynamicAlignedText>
    <ForwardRef(Divider) />
    <IconAndText
      align="center"
      component="h3"
      iconComponent={
        <MyIcon
          variant="map-marker"
        />
      }
      iconPosition="left"
      text="ピン一覧"
      variant="h6"
    />
    <ForwardRef(Stack)
      spacing={5}
    >
      <ForwardRef(Box)
        bgcolor="#f5f8fa"
        border="3px solid #424242"
        key="special-map-marker--67.6875-140.75"
      >
        <NonStyleLink
          to="/special-maps/0?marker=1&park=L"
        >
          <ForwardRef(Box)
            height={200}
            mx="auto"
          >
            <ParkMap
              disabled={true}
              initCenter={
                Object {
                  "lat": -67.6875,
                  "lng": 140.75,
                }
              }
              initZoom={2}
              park="L"
            >
              <MapMarker
                autoOpen={false}
                draggable={false}
                position={
                  Object {
                    "lat": -67.6875,
                    "lng": 140.75,
                  }
                }
                variant="restroom"
                zIndexOffset={0}
              />
            </ParkMap>
          </ForwardRef(Box)>
        </NonStyleLink>
        <ForwardRef(Box)
          p={1}
        >
          <DynamicAlignedText
            component="div"
            mb={1}
            whiteSpace="pre-wrap"
          >
            アリスモチーフのトイレです。トランプ模様の扉がかわいい。
          </DynamicAlignedText>
          <ForwardRef(Typography)
            align="center"
            component="div"
            mb={1}
          >
            <Image
              maxHeight="300px"
              maxWidth="full"
              src="https://cdn-ak.f.st-hatena.com/images/fotolife/n/nats-co/20160323/20160323164220.jpg"
            />
          </ForwardRef(Typography)>
          <NonStyleLink
            to="/special-maps/0?marker=1&park=L"
          >
            <ForwardRef(Typography)
              align="right"
            >
              <ForwardRef(Button)>
                <IconAndText
                  component="span"
                  iconComponent={<Memo />}
                  iconPosition="left"
                  text="地図上で確認する"
                />
              </ForwardRef(Button)>
            </ForwardRef(Typography)>
          </NonStyleLink>
        </ForwardRef(Box)>
      </ForwardRef(Box)>
      <ForwardRef(Box)
        bgcolor="#f5f8fa"
        border="3px solid #424242"
        key="special-map-marker--140.46875-111.0625"
      >
        <NonStyleLink
          to="/special-maps/0?marker=2&park=S"
        >
          <ForwardRef(Box)
            height={200}
            mx="auto"
          >
            <ParkMap
              disabled={true}
              initCenter={
                Object {
                  "lat": -140.46875,
                  "lng": 111.0625,
                }
              }
              initZoom={2}
              park="S"
            >
              <MapMarker
                autoOpen={false}
                draggable={false}
                position={
                  Object {
                    "lat": -140.46875,
                    "lng": 111.0625,
                  }
                }
                variant="restroom"
                zIndexOffset={0}
              />
            </ParkMap>
          </ForwardRef(Box)>
        </NonStyleLink>
        <ForwardRef(Box)
          p={1}
        >
          <DynamicAlignedText
            component="div"
            mb={1}
            whiteSpace="pre-wrap"
          >
            エントランスのトイレならここ。
          </DynamicAlignedText>
          <NonStyleLink
            to="/special-maps/0?marker=2&park=S"
          >
            <ForwardRef(Typography)
              align="right"
            >
              <ForwardRef(Button)>
                <IconAndText
                  component="span"
                  iconComponent={<Memo />}
                  iconPosition="left"
                  text="地図上で確認する"
                />
              </ForwardRef(Button)>
            </ForwardRef(Typography)>
          </NonStyleLink>
        </ForwardRef(Box)>
      </ForwardRef(Box)>
    </ForwardRef(Stack)>
  </ForwardRef(Stack)>
</ArticleWrapper>
`;

exports[`Shallow Snapshot Tests loading markers 1`] = `
<ArticleWrapper
  localBackNavi={
    Object {
      "link": "/special-maps/0",
      "text": "トイレマップへ戻る",
    }
  }
  showSidebar={true}
>
  <CommonHelmet
    description="定番から穴場まで、ディズニーのトイレマップです。"
    imageUrl="https://www.yuu-diaryblog.com/wp-content/uploads/2017/06/disney-wc.jpg"
    ogType="article"
    title="トイレマップ"
  />
  <ForwardRef(Stack)
    spacing={2}
  >
    <ShareButtons
      description="定番から穴場まで、ディズニーのトイレマップです。"
      title="トイレマップ"
      url="http://localhost/special-maps/1"
    />
    <ForwardRef(Divider) />
    <AuthorLink
      author={
        Object {
          "icon": "https://disneyparkstory.com/wp-content/uploads/2017/09/apple-touch-icon.png",
          "nickname": "Axel",
          "url": "https://disneyparkstory.com",
          "userId": 1,
        }
      }
    />
    <DynamicAlignedText
      component="h2"
      sx={
        Object {
          "wordBreak": "break-all",
        }
      }
      variant="h5"
    >
      トイレマップ
    </DynamicAlignedText>
    <Image
      src="https://www.yuu-diaryblog.com/wp-content/uploads/2017/06/disney-wc.jpg"
      width="full"
    />
    <DynamicAlignedText
      fontSize={18}
      whiteSpace="pre-wrap"
    >
      定番から穴場まで、ディズニーのトイレマップです。
    </DynamicAlignedText>
    <ForwardRef(Divider) />
    <IconAndText
      align="center"
      component="h3"
      iconComponent={
        <MyIcon
          variant="map-marker"
        />
      }
      iconPosition="left"
      text="ピン一覧"
      variant="h6"
    />
    <ForwardRef(Stack)
      spacing={5}
    >
      <CenterSpinner />
    </ForwardRef(Stack)>
  </ForwardRef(Stack)>
</ArticleWrapper>
`;
